<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/intro_background"
        tools:context=".IntroActivity">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/intro_screen_title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/intro_screen_image_marginTop"
            android:contentDescription="@string/image_contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/intro_activity_neww_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
            android:text="@string/let_s_get_started_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/lets_get_started_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/intro_text_marginStartEnd"
            android:layout_marginTop="@dimen/intro_text_marginTop"
            android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
            android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
            android:text="@string/intro_text_description"
            android:gravity="center"
            android:textSize="@dimen/intro_text_size" />


        <Button
            android:id="@+id/btn_register_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_up_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/white_shape_border_rounded"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</ScrollView>