<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".activities.AboutAppActivity">

    <include layout="@layout/tool_bar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/touchAreaLarge"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name"
                android:elevation="@dimen/elevationLarge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/textLarge"
                android:padding="@dimen/paddingSmall"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/back"
                    android:text="@string/developed_by"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSmall" />

                <TextView
                    android:id="@+id/text_app_developers"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_devs"
                    android:textSize="@dimen/textSmall"
                    android:gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:linksClickable="true"
                    android:autoLink="web"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:longClickable="true"
                    android:textIsSelectable="true"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>