<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ic_background"
        tools:context=".SignUpActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_sign_up_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/register"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold"
                android:textSize="@dimen/toolbar_title_text_size"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:gravity="center"
                android:text="@string/sign_up_description_text"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/authentication_description_text_size"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                tools:targetApi="lollipop"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/card_view_layout_content_padding">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:maxLength="20"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/et_text_size"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phoneNumber"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textSize="@dimen/et_text_size"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/btn_marginStartEnd"
                        android:layout_marginEnd="@dimen/btn_marginStartEnd"
                        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text= "@string/register"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size"
                        app:backgroundTint="@null"
                        android:background="@drawable/shape_button_rounded"
                        tools:targetApi="m"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                tools:targetApi="lollipop"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/card_view_layout_content_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_otp_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="6"
                            android:hint="@string/verification_code"
                            android:inputType="numberPassword"
                            android:textSize="@dimen/et_text_size"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_resend_code_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        tools:text="00 : 30"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/btn_marginStartEnd"
                        android:layout_marginEnd="@dimen/btn_marginStartEnd"
                        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                        >
                        <Button
                            android:id="@+id/btn_verify"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:paddingTop="@dimen/btn_paddingTopBottom"
                            android:paddingBottom="@dimen/btn_paddingTopBottom"
                            android:text= "@string/verify"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/btn_text_size"
                            app:backgroundTint="@null"
                            android:background="@drawable/shape_button_rounded"
                            tools:targetApi="m"
                            tools:ignore="UnusedAttribute"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_marginRight="5dp" />
                        <Button
                            android:id="@+id/btn_resendOtp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            tools:visibility="gone"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:paddingTop="@dimen/btn_paddingTopBottom"
                            android:paddingBottom="@dimen/btn_paddingTopBottom"
                            android:text= "@string/resend_otp"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/btn_text_size"
                            app:backgroundTint="@null"
                            android:background="@drawable/shape_button_rounded"
                            tools:targetApi="m"
                            tools:ignore="UnusedAttribute"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_marginStart="5dp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>